[gd_scene load_steps=9 format=3 uid="uid://3oqu8xcbesdl"]

[ext_resource type="Script" path="res://Scripts/GameScripts/BossMonster.gd" id="1_y7t8c"]
[ext_resource type="Texture2D" uid="uid://dxubeuabbv26b" path="res://assets/img/boss_ancestor.png" id="2_bphpr"]
[ext_resource type="Shader" path="res://Scenes/Monster.gdshader" id="2_c2ab5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rsi8q"]
resource_local_to_scene = true
shader = ExtResource("2_c2ab5")
shader_parameter/quantity = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q8hnj"]
size = Vector2(340, 340)

[sub_resource type="Animation" id="Animation_ijuj3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/quantity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_5ipux"]
resource_name = "damage"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/quantity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [1.0, 1.0, 0.0, 0.0, 1.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_squgn"]
_data = {
"RESET": SubResource("Animation_ijuj3"),
"damage": SubResource("Animation_5ipux")
}

[node name="BossMonster" type="CharacterBody2D"]
collision_layer = 64
collision_mask = 17
script = ExtResource("1_y7t8c")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_rsi8q")
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_bphpr")
flip_h = true

[node name="BossCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_q8hnj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_squgn")
}

[node name="PatternTimer" type="Timer" parent="."]
one_shot = true

[node name="MoveTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="FireTimer" type="Timer" parent="."]

[node name="FireStopTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="PatternTimer" to="." method="_on_pattern_timer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
[connection signal="timeout" from="FireStopTimer" to="." method="_on_fire_stop_timer_timeout"]
